<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".NewUserActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/newPlayerSignupHorizontalRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NewPlayerSignupLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="New Player Signup"
            style="@style/style_textView_screenTitle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newPlayerSignupHorizontalRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newUserNameLabel"
            android:labelFor="@id/newUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="User Name:"/>

        <EditText
            android:id="@+id/newUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="text"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newPlayerSignupHorizontalRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newUserFirstNameLabel"
            android:labelFor="@id/newUserFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="First Name:"/>

        <EditText
            android:id="@+id/newUserFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="text"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newPlayerSignupHorizontalRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newUserLastNameLabel"
            android:labelFor="@id/newUserLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Last Name:"/>

        <EditText
            android:id="@+id/newUserLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="text"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newPlayerSignupHorizontalRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newUserEmailLabel"
            android:labelFor="@id/newUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Email:" />

        <EditText
            android:id="@+id/newUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newPlayerSignupHorizontalRow6"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/runButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_weight="1"
            android:text="Create User"
            style="@style/style_button"/>

    </LinearLayout>


</LinearLayout>
</RelativeLayout>