...
            android:id="@+id/LoginHorizontalRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_login_screen_username"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="5dp"
...
            android:id="@+id/LoginHorizontalRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login_screen_LogIn"
                style="@style/style_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
...
